<?xml version="1.0"?>
<package format="2">
  <name>week5_pkg</name>
  <version>0.0.1</version>
  <description>Week 5 ROS Service/Client 作业包 — 史卓远 杜泽凝</description>

  <maintainer email="student@example.com">史卓远 杜泽凝</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
